css/styles.css
body {
  font-family: 'Roboto', sans-serif;
  color: #434455;
  background-color: #fff;
  line-height: 1.5;
  letter-spacing: 0.02em;
}

a {
  text-decoration: none;
  display: inline-block;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
}

ul,
li {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

button {
  cursor: pointer;
  border: none;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin-top: 0;
  margin-bottom: 0;
}

.container {
  width: 1158px;
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
}

/*=======navigation style=======*/

.top-line {
  border-bottom: 1px solid #e7e9fc;
  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
}

.container.header-container {
  display: flex;
  justify-content: space-between;
}

.page-nav {
  display: flex;
  align-items: center;
}

.menu {
  display: flex;
  gap: 40px;
}

.head-adres-list {
  display: flex;
  gap: 40px;
  padding: 24px 0;
}

.logo {
  font-family: 'Raleway', sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: #4d5ae5;
  margin-right: 76px;
}

.logo-color {
  color: #2e2f42;
}

.menu-link {
  position: relative;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #2e2f42;
  padding: 24px 0;
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.menu-link:hover,
.menu-link:focus {
  color: #404bbf;
}

.menu-link.act {
  color: #404bbf;
}

.menu-link.act::after {
  content: '';
  position: absolute;
  background-color: #404bbf;
  border-radius: 2px;
  width: 100%;
  height: 4px;
  bottom: -1px;
  left: 0;
}

.head-adres {
  font-style: normal;
}

.head-adres-link {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.head-adres-link:hover,
.head-adres-link:focus {
  color: #404bbf;
}

.section {
  padding: 120px 0;
}

/*=========hero styles=========*/

.hero {
  background-color: #2e2f42;
  background-image: linear-gradient(
      to bottom,
      rgba(46, 47, 66, 0.7),
      rgba(46, 47, 66, 0.7)
    ),
    url('../images/peopleoffice.jpg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  max-width: 1440px;
  margin: auto;
  padding: 188px 0;
}

.hero-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 48px;
}

.hero-title {
  font-weight: 700;
  font-size: 56px;
  line-height: 1.07;
  letter-spacing: 0.02em;
  text-align: center;
  color: #fff;
  max-width: 496px;
}

.hero-container .btn {
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.04em;
  color: #fff;
  background-color: #4d5ae5;
  border-radius: 4px;
  padding: 16px 32px;
  min-width: 169px;
  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.hero-container .btn:hover,
.hero-container .btn:focus {
  background-color: #404bbf;
}

/*=======Promo styles========*/

.promo-sect {
  display: flex;
}

.promo-item {
  width: calc((100% - 24px * 3) / 4);
}

.promo-item:not(:last-child) {
  margin-right: 24px;
}

.promo-icon-box {
  display: flex;
  height: 112px;
  width: 264px;
  border: 1px solid #8e8f99;
  border-radius: 4px;
  align-items: center;
  justify-content: center;
  background-color: #f4f4fd;
  margin-bottom: 8px;
}

.promo-icon {
  fill: #2e2f42;
}

.promo-item-title {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
  margin-bottom: 8px;
}

/*=====Team section styles=====*/

.team {
  background-color: #f4f4fd;
}

.team-title {
  font-size: 36px;
  line-height: 1.11;
  text-align: center;
  letter-spacing: 0.02em;
  text-transform: capitalize;
  color: #2e2f42;
  margin-bottom: 72px;
}
.team-list {
  display: flex;
  border-radius: 0 0 4px 4px;
  gap: 24px;
}

.team-item {
  background-color: #ffffff;
  width: calc((100% - 24px * 3) / 4);
  border-radius: 0px 0px 4px 4px;
  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
}

.team-item .content {
  padding: 32px 0px;
}

.team-item-title {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  text-align: center;
  color: #2e2f42;
  margin-bottom: 8px;
}

.team-item-position {
  text-align: center;
}

.social-list {
  margin-top: 8px;
  padding: 0 16px;
  gap: 24px;
}

.social-list-item-team {
  justify-content: center;
}

.social-list-link-team {
  display: flex;
  width: 40px;
  height: 40px;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  background-color: #4d5ae5;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.social-list-link-team:hover,
.social-list-link-team:focus {
  background-color: #404bbf;
}

/*=====Portfolio section styles=====*/

.portfolio-title {
  font-weight: 700;
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  text-transform: capitalize;
  text-align: center;
  color: #2e2f42;
  margin-bottom: 72px;
}

.portfolio-list {
  display: flex;
  flex-wrap: wrap;
  gap: 48px 24px;
}

.portfolio-item {
  width: calc((100% - 24px * 2) / 3);
  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.portfolio-item:hover {
  border-color: #f4f4fd;
  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
}

.portfolio-item:hover .overlay-text {
  transform: translateY(0%);
}

.overlay-portfolio {
  overflow: hidden;
  position: relative;
}

.overlay-text {
  position: absolute;
  top: 0;
  left: 0;
  background-color: #4d5ae5;
  color: #f4f4fd;
  width: 100%;
  height: 100%;
  padding: 40px 32px;
  transform: translateY(100%);
  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.portfolio-item .content {
  padding: 32px 16px;
  border: 1px solid #e7e9fc;
  border-top: none;
}

.portfolio-item-title {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
  margin-bottom: 8px;
}

.portfolio-item-value {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
}

/*=====Footer styles=====*/

.final {
  background-color: #2e2f42;
  padding: 100px 0;
}

.final-container {
  display: flex;
  align-items: baseline;
}

.container-logo {
  margin-right: 120px;
  max-width: 264px;
}

.logo.down {
  margin-bottom: 16px;
}

.logo-sec-col {
  color: #f4f4fd;
}
.down-text {
  font-weight: 400;
  font-size: 16px;
  color: #f4f4fd;
  max-width: 264px;
}

.container-social {
  display: column;
  height: 80px;
  width: 208px;
  position: relative;
}

.social-text {
  font-weight: 500;
  font-size: 16px;
  color: #fff;
  margin-bottom: 16px;
}

.social-list {
  display: flex;
  gap: 16px;
  justify-content: center;
}

.social-list-link {
  display: flex;
  width: 40px;
  height: 40px;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  background-color: #4d5ae5;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.social-list-icon {
  fill: #f4f4fd;
}

.social-list-link:hover,
.social-list-link:focus {
  background-color: #31d0aa;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

